force-app/main/default/objects/Horse__c/Horse__c.object-meta.xml
<CustomObject>
    <label>Horse</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Horses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>