force-app/main/default/objects/Horse__c/fields/Acquisition_Cost__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Cost__c</fullName>
    <label>Acquisition Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>