force-app/main/default/objects/Horse__c/fields/Auction_Sale__c.field-meta.xml
<CustomField>
    <fullName>Auction_Sale__c</fullName>
    <label>Auction Sale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>