force-app/main/default/objects/Horse__c/fields/Auction_Sale_Sold_At__c.field-meta.xml
<CustomField>
    <fullName>Auction_Sale_Sold_At__c</fullName>
    <label>Auction Sale Sold At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>