force-app/main/default/objects/Horse__c/fields/Birth_Age__c.field-meta.xml
<CustomField>
    <fullName>Birth_Age__c</fullName>
    <formula>IF(
NOT(ISBLANK( Date_of_Birth__c )),
IF(DATE(2000,MONTH(Date_of_Birth__c),DAY(Date_of_Birth__c))&lt;=DATE(2000,MONTH(TODAY()),DAY(TODAY())),
YEAR(Today()) - YEAR (Date_of_Birth__c),
YEAR(Today()) - YEAR (Date_of_Birth__c) -1),
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birth Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>