force-app/main/default/objects/Horse__c/fields/Breeders_Cup_Nominated__c.field-meta.xml
<CustomField>
    <fullName>Breeders_Cup_Nominated__c</fullName>
    <label>Breeders Cup Nominated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>