force-app/main/default/objects/Horse__c/fields/Certificate_Manager_Owner_Papers__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Manager_Owner_Papers__c</fullName>
    <label>Certificate Manager - Owner Papers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>