force-app/main/default/objects/Horse__c/fields/Equibase_URL__c.field-meta.xml
<CustomField>
    <fullName>Equibase_URL__c</fullName>
    <label>Equibase URL</label>
    <type>Url</type>
</CustomField>