force-app/main/default/objects/Horse__c/fields/Key_Photo__c.field-meta.xml
<CustomField>
    <fullName>Key_Photo__c</fullName>
    <label>Photo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>