force-app/main/default/objects/Horse__c/fields/KTDF_Registered__c.field-meta.xml
<CustomField>
    <fullName>KTDF_Registered__c</fullName>
    <label>KTDF Registered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>