force-app/main/default/objects/Horse__c/fields/Mortality_Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Mortality_Insurance_Amount__c</fullName>
    <label>Mortality Insurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>