force-app/main/default/objects/Horse__c/fields/Partnership__c.field-meta.xml
<CustomField>
    <fullName>Partnership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partnership</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partnership</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partnership Horses</relationshipLabel>
    <relationshipName>Partnership_Horses</relationshipName>
    <type>Lookup</type>
</CustomField>