force-app/main/default/objects/Horse__c/fields/PartnershipFormula__c.field-meta.xml
<CustomField>
    <fullName>PartnershipFormula__c</fullName>
    <formula>Partnership__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership</label>
    <type>Text</type>
</CustomField>