force-app/main/default/objects/Horse__c/fields/Pedigree__c.field-meta.xml
<CustomField>
    <fullName>Pedigree__c</fullName>
    <label>Pedigree</label>
    <type>Url</type>
</CustomField>