force-app/main/default/objects/Horse__c/fields/Race_Horse_Age__c.field-meta.xml
<CustomField>
    <fullName>Race_Horse_Age__c</fullName>
    <formula>IF((MONTH(TODAY()) &gt; 1) || (MONTH(TODAY()) = 1 &amp;&amp; DAY(TODAY()) &gt;= 1),
YEAR(TODAY()) - YEAR(Date_of_Birth__c),
YEAR(TODAY()) - YEAR(Date_of_Birth__c) +1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>