force-app/main/default/objects/Horse__c/fields/Race_Video__c.field-meta.xml
<CustomField>
    <fullName>Race_Video__c</fullName>
    <label>Race Video</label>
    <type>Url</type>
</CustomField>