force-app/main/default/objects/Horse__c/fields/Sex__c.field-meta.xml
<CustomField>
    <fullName>Sex__c</fullName>
    <label>Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broodmare</fullName>
            </value>
            <value>
                <fullName>Colt</fullName>
            </value>
            <value>
                <fullName>Filly</fullName>
            </value>
            <value>
                <fullName>Gelding</fullName>
            </value>
            <value>
                <fullName>Horse</fullName>
            </value>
            <value>
                <fullName>Mare</fullName>
            </value>
            <value>
                <fullName>Ridgling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>