force-app/main/default/objects/Horse__c/fields/Sold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sold_Amount__c</fullName>
    <label>Sold Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>