force-app/main/default/objects/Horse__c/fields/State_Bred__c.field-meta.xml
<CustomField>
    <fullName>State_Bred__c</fullName>
    <label>State Bred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_States</valueSetName>
    </valueSet>
</CustomField>