force-app/main/default/objects/Horse__c/fields/Universal_BirthdateYear__c.field-meta.xml
<CustomField>
    <fullName>Universal_BirthdateYear__c</fullName>
    <formula>IF(ISBLANK(Date_of_Birth__c),
Date_of_Birth__c,
IF(MONTH(Date_of_Birth__c)=2 &amp;&amp; DAY(Date_of_Birth__c)=29,
DATE(YEAR(Date_of_Birth__c)+1, 2, 28),
DATE(YEAR(Date_of_Birth__c)+1, MONTH(Date_of_Birth__c), DAY(Date_of_Birth__c)) - 1
)
)</formula>
    <inlineHelpText>Used for formula only!</inlineHelpText>
    <label>Universal Birthdate Year</label>
    <type>Date</type>
</CustomField>