force-app/main/default/objects/Horse__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Partnership__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Sex__c</columns>
    <columns>Race_Horse_Age__c</columns>
    <columns>Date_of_Birth__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>